[package]
name = "sync-unsafe-cell"
version = "0.1.0"
authors = ["Christopher Head"]
edition = "2021"
description = "A backport of the SyncUnsafeCell standard library type for use in older Rust versions"
repository = "https://gitlab.com/Hawk777/sync-unsafe-cell"
readme = "README.md"
keywords = ["cell", "sync"]
categories = ["concurrency", "embedded", "no-std"]
license = "MIT OR Apache-2.0"
